# DocExtract

./: .dockerignore  .gitignore  PLAN.md  README.md  TASKS.md  docker-compose.yml  main.py  pyproject.toml  report.md  sd2.md
backend/: Dockerfile  requirements.txt  test.ipynb
backend/app/: __init__.py  config.py  graph.py  main.py  models.py  new_graph.py  state.py
backend/app/data/: __init__.py  sql_db.py
backend/app/nodes/: classify.py  extract.py  format.py  ingest.py  parse.py
backend/app/services/: crypto_service.py  docling_service.py  docling_surya_ocr.py  llm_service.py
backend/tests/: test_docling_surya.py
frontend/: Dockerfile  app.py  requirements.txt
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
