[project]
name = "docextract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling-surya",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pillow>=10.2.0,<11.0.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.5",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.50.0",
    "pymupdf4llm",
    "transformers>=4.40.0,<5.0.0",
]
